# node-plugin

./: .gitignore  README.md  build.yaml  build.yml  index.js  package.json  promise_plugin.js
addon/: _dlfcn.h  addon.cc  addon.cpp  addon.hpp  binding.gyp  plugin.c  plugin.h  test.js
c++/: build.bat  build.sh
c++/addon/: _dlfcn.cc  addon-napi.cc  addon.cc  addon.h  binding.gyp  function-def.h  node_plugin_interface.h  plugin.cc  plugin.h  plugin_interface.h
c++/plugin/: CMakeLists.txt  CMakelists.txt
c++/plugin/converter/: main.c
c++/plugin/example/: calc.cpp  plugin.cpp
lib/: conan.js  enums.js  install.js  plugin.js
plugin/example/: plugin.cpp
promise/: promise_plugin.js  sample.js
promise/test/: test.js  test2.js
test/: converter.js  test.js
util/: template.js
